--- a/authSecurity/src/main/resources/application.properties
+++ b/authSecurity/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dbSecurity
+spring.datasource.url=jdbc:mysql://localhost:3306/dbSecurity?createDatabaseIfNotExist=true 
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+server.port=9000
+logging.level.org.springframework.security=trace
